--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1> Hola mi nombre es Yesik y estoy en camino a ser programador web frond ent </h1>
+<h1> Hola mi nombre es Yesik y estoy en camino a ser programador web frond end </h1>
